# MotiFold

./: .dockerignore  .env  .gitignore  MORPHOLOGICAL_ENHANCEMENT_DESIGN.md  Makefile  README.md  compose.dev.yaml  compose.yaml  docker-compose.yml
backend/: Dockerfile  create_tables.py  main.py  pyproject.toml  trigger_tenant_migrations.py
backend/app/: main.py
backend/app/auth/: models.py  router.py  schemas.py
backend/app/blackboard/: agent.py  models.py  router.py  schemas.py
backend/app/chat/: agent.py  models.py  router.py  schemas.py
backend/app/core/: async_bridge.py  config.py  database.py  tenant_migration_constants.py
backend/app/llm/: __init__.py  calls.py  factory.py  logger.py
backend/app/matrix/: models.py  router.py  schemas.py  service.py  stream.py  tools.py
backend/app/mcp/: operations.py  server.py  tools.py
backend/app/memory/: __init__.py  embedding.py  entity.py  fusion.py  models.py  reranker.py  router.py  schemas.py  search.py  service.py
backend/app/org/: dependencies.py  models.py  provisioner.py  router.py  schemas.py  workspace_member.py
backend/app/research/: __init__.py  agent.py  models.py  (+7 more)
backend/migrations/: env.py
backend/tests/: conftest.py  pytest.ini  test_auth.py  test_llm_blackboard.py  test_llm_calls.py  test_llm_morphological.py  test_matrix_router.py  test_mcp_tools.py  test_multitenancy.py  test_org.py  test_research_agent.py  test_research_golden.py  test_research_integration.py  test_research_prompts.py  test_research_schemas.py  test_research_tasks_import.py  test_research_tools.py  test_worker.py
(+209 files in other folders)
